Fix Spacing CB02 and Font Fixes Allover

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@
     border-radius: 4px;
     border: 0px;
     font-size: 18px;
+    font-weight: 500;
   }
 
   #header{
@@ -103,7 +104,7 @@
   }
 
   .content-block{
-    height: 350px;
+    height: 400px;
     gap: 50px;
     display: flex;
     justify-content: center;
@@ -144,12 +145,14 @@
   #content-block-02{
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
   }
 
   .content-block-02__header{
     font-size: 36px;
     font-weight: bolder;
     color: #1f2937;
+    margin-top: 24px;
   }
 
   .content-block-02__box-text-container{
@@ -164,19 +167,20 @@
   }
 
   .box{
-    width: 100px;
-    height: 100px;
+    width: 125px;
+    height: 125px;
     border: 3px solid  #3882F6;
     border-radius: 8px;
   }
 
   .text{
     text-align: center;
+    font-weight: 300;
   }
 
   .content-block-02__box-text-container-container{
     display: flex;
-    gap: 16px;
+    gap: 24px;
   }
   #content-block-03{
       background-color: #E5E7EB;
@@ -206,9 +210,9 @@
 
   .content-block-04__container{
       background-color: #3882F6;
-      width: 700px;
+      width: 950px;
       display: flex;
-      padding: 24px;
+      padding: 48px 36px;
       justify-content: space-around;
       align-items: center;
       border-radius: 6px;
